# apre-benchmark-database

./: README.ipynb  README.md  pyproject.toml
examples/: USB.ipynb
metadata/: protocol_data.csv  tshark_protocols.csv
src/APREdatabase/: ParseFileWithTShark.py  README.ipynb  README.md  WiresharkField.py  WiresharkPacket.py  __init__.py  data_loaders.py  file_operations.py  parse_lua.py  tshark_operations.py
src/APREdatabase/LuaPlugins/: README.md  lifx.lua  ump.lua
src/APREdatabase/Protocols/: DrawPFG.ipynb  README.md  protocol_data.csv
src/APREdatabase/tmp/: fields.csv  times.json
src/APREmeasures/: AbstractFieldF.py  FieldTree.py  FieldTreeScore.py  README.ipynb  README.md  __init__.py  measures.py
src/PacketFeatureTree/: README.ipynb  README.md  __init__.py
src/PacketFeatureTree/ByteLabelModels/: clf_ARP.pkl  clf_ARP_base.pkl  clf_DHCP.pkl  clf_DHCP_base.pkl  clf_DNP3.pkl  clf_DNP3_base.pkl  clf_DNS.pkl  clf_DNS_base.pkl  clf_EAPOL.pkl  clf_EAPOL_base.pkl  clf_ETHERNET.pkl  clf_ETHERNET_base.pkl  clf_FTPv6.pkl  clf_FTPv6_base.pkl  clf_HTTP.pkl  clf_HTTP_base.pkl  clf_ModBus.pkl  clf_ModBusTCP.pkl  clf_ModBusTCP_base.pkl  clf_ModBus_base.pkl  clf_NBDGM.pkl  clf_NBDGM_base.pkl  clf_NBNS.pkl  clf_NBNS_base.pkl  clf_NTPv4.pkl  clf_NTPv4_base.pkl  clf_PMU.pkl  clf_PMU_base.pkl  clf_S7Comm.pkl  clf_S7Comm_base.pkl  clf_SMB2.pkl  clf_UDP.pkl  clf_UDP_base.pkl  clf_USBMouse.pkl  clf_USBMouse_base.pkl
src/PacketFeatureTree/PFT/: BasePFT.py  LabelledPFT.py  OLD.py  OneBytePFT.py  __init__.py  anytree_vis.py  labelling_bytes.py  my_field_node.py  (+2 more)
(+118 files in other folders)
