[project]
name = "apre-benchmark-database"
version = "1.0.0"
dependencies = ["pandas", "anytree", "Levenshtein", "networkx", "scikit-learn==1.3.0", "imblearn",
                "matplotlib"]
authors = []
description = "APRE Benchmark Database, Measures and Packet Feature Tree"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Researchers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["protocol", "packet", "reverse-engineering"]


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
